# CDScore

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  README.md  cdscore.py  pyproject.toml
src/: __init__.py  cds_app.py  comment_utils.py  data_types.py  enums.py  exceptions.py  logging_setup.py
src/density_calculation/: __init__.py  cds_scoring_manager.py  comment_checker.py  comment_finder.py  density_searcher.py  output_formatter.py
src/density_calculation/abc_rule/: registry.py  rule.py  strategy.py
src/density_calculation/checker/: comment_checker.py
src/density_calculation/checker/abc_rule/: registry.py  rule.py  rule_decorator.py  specification.py  strategy.py
src/density_calculation/checker/rules/: __init__.py  loader.py  max_len_rule.py  min_len_rule.py
src/density_calculation/finder/: comment_finder.py  language_data.py  node_extractor.py  syntax_analyzer.py
src/density_calculation/finder/lang_normalizers/: python_normalizer.py
src/density_calculation/finder/languages_formats/: __init__.py  python_format.py
src/density_calculation/rules/: max_len_rule.py  min_len_rule.py
src/output/: __init__.py  abstract_output.py  cli_output.py
