[project]
name = "qscad"
version = "0.12.1-alpha"
requires-python = ">=3.12"


# Настрйки Ruff
[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
lint.select = ["E", "F", "I", "B", "UP"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "auto"
docstring-code-line-length = "dynamic"


# Настрйки MyPy
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_untyped_calls = true


# Настройка Pytest 
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_files = ["test_*.py"]


[tool.pip-tools]
allow-unsafe = false
